--- a/data-prep.Rmd
+++ b/data-prep.Rmd
@@ -9,37 +9,22 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r cars}
+```{r}
+library(sqldf)
 library(here)
 df = read.csv(here("Data","movement-speeds-hourly-seattle-2019-1.csv"))
 head(df)
 ```
 
-
 ```{r}
-head(df,20)
-aggregate(speed_mph_mean ~ utc_timestamp, df, mean)
-```
-
-
-```{r}
-library(sqldf)
-jan = sqldf('SELECT year, month, day , AVG(speed_mph_mean) AS speed_mph_mean, AVG(speed_mph_stddev) AS speed_mph_stddev FROM df GROUP BY month, day')
-```
-
-
-
-```{r}
-write.csv(jan, here("Data","2019-Jan-Daily-Aggregated.csv"))
+month = sqldf('SELECT year, month, day , utc_timestamp, AVG(speed_mph_mean) AS speed_mph_mean, AVG(speed_mph_stddev) AS speed_mph_stddev FROM df GROUP BY month, day')
+write.csv(month, here("Data","2019-Jan-Daily-Aggregated.csv"))
 ```
 
 ```{r}
 library(sqldf)
 library(here)
 df = read.csv(here("Data","movement-speeds-hourly-seattle-2019-2.csv"))
-```
-
-```{r}
 head(df)
 ```
 
